# gemm

./: .gitignore  CMakeLists.txt  mm_run.cu  readme.md
include/: mm.cuh  utils.cuh
